--- a/index.html
+++ b/index.html
@@ -184,8 +184,7 @@
     </div>
 
     <div class="slider">
-      <!--
-      <div class="slide slide--1">
+      <div class="slide">
         <div class="testimonial">
           <h5 class="testimonial__header">Best financial decision ever!</h5>
           <blockquote class="testimonial__text">
@@ -204,7 +203,7 @@
         </div>
       </div>
 
-      <div class="slide slide--2">
+      <div class="slide">
         <div class="testimonial">
           <h5 class="testimonial__header">
             The last step to becoming a complete minimalist
@@ -224,7 +223,7 @@
         </div>
       </div>
 
-      <div class="slide slide--3">
+      <div class="slide">
         <div class="testimonial">
           <h5 class="testimonial__header">
             Finally free from old-school banks
@@ -244,12 +243,7 @@
           </address>
         </div>
       </div>
-      -->
 
-      <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
-      <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
-      <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
-      <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div>
       <button class="slider__btn slider__btn--left">&larr;</button>
       <button class="slider__btn slider__btn--right">&rarr;</button>
       <div class="dots"></div>
